fixed Alignment and margin in about route

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -8,4 +8,5 @@ b {
 
 .aboutme {
   line-height: 200%;
+  text-align: justify;
 }
